--- a/index.html
+++ b/index.html
@@ -1,27 +1,19 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Angelo Ramos, Entusiasta tecnologico</title>
+		<title>Angelorum</title>
 	</head>
 	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
+        		<h1>En Construcción</h1>
+			</div>
+		</div>
 		<footer>
     		<ul>
-        		<li><a href="mailto:angelo.ramos.o@gmail.com">email</a></li>
-        		<li><a href="https://github.com/angelorum">github.com/angelorum</a></li>
+        		<li><a href="mailto:angelo.ramos.o@gmail.com">Email</a></li>
+				<li><a href="https://github.com/angelorum">Github</a></li>
+				<li><a href="./docs/CV-AngeloRamos-ES.pdf">CV-ES</a></li>
 			</ul>
 		</footer>
 	</body>
