Asignación de dominio

--- a/404.html
+++ b/404.html
@@ -84,8 +84,8 @@
   
 
   
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Angelorum">
-  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Angelorum">
+  <link rel="alternate" href="https://angelorum.me/index.xml" type="application/rss+xml" title="Angelorum">
+  <link rel="feed" href="https://angelorum.me/index.xml" type="application/rss+xml" title="Angelorum">
   
 
   <link rel="manifest" href="/site.webmanifest">
@@ -108,7 +108,7 @@
   <meta property="og:site_name" content="Angelorum">
   <meta property="og:url" content="">
   <meta property="og:title" content="404 Page not found | Angelorum">
-  <meta property="og:description" content="Anfelorum CV"><meta property="og:image" content="/img/me.jpg">
+  <meta property="og:description" content="Anfelorum CV"><meta property="og:image" content="https://angelorum.me/img/me.jpg">
   <meta property="og:locale" content="en-us">
   
   
