--- a/publication_types/index.html
+++ b/publication_types/index.html
@@ -20,7 +20,7 @@
   <meta name="description" content="Anfelorum CV">
 
   
-  <link rel="alternate" hreflang="en-us" href="/publication_types/">
+  <link rel="alternate" hreflang="en-us" href="https://angelorum.me/publication_types/">
 
   
 
@@ -86,15 +86,15 @@
   
 
   
-  <link rel="alternate" href="/publication_types/index.xml" type="application/rss+xml" title="Angelorum">
-  <link rel="feed" href="/publication_types/index.xml" type="application/rss+xml" title="Angelorum">
+  <link rel="alternate" href="https://angelorum.me/publication_types/index.xml" type="application/rss+xml" title="Angelorum">
+  <link rel="feed" href="https://angelorum.me/publication_types/index.xml" type="application/rss+xml" title="Angelorum">
   
 
   <link rel="manifest" href="/site.webmanifest">
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="/publication_types/">
+  <link rel="canonical" href="https://angelorum.me/publication_types/">
 
   
   
@@ -108,9 +108,9 @@
   <meta property="twitter:creator" content="@angelorum">
   
   <meta property="og:site_name" content="Angelorum">
-  <meta property="og:url" content="/publication_types/">
+  <meta property="og:url" content="https://angelorum.me/publication_types/">
   <meta property="og:title" content="Publication_types | Angelorum">
-  <meta property="og:description" content="Anfelorum CV"><meta property="og:image" content="/img/me.jpg">
+  <meta property="og:description" content="Anfelorum CV"><meta property="og:image" content="https://angelorum.me/img/me.jpg">
   <meta property="og:locale" content="en-us">
   
   
